src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_error_state.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ───────── claude-3-5-sonnet... ╮ "
"                                                       │                                          │ "
"                                                       │ ⚠ Error                                  │ "
"                                                       │                                          │ "
"                                                       │ API Error: Rate limit exceeded. Please   │ "
"                                                       │ try again later.                         │ "
"                                                       │ ──────────────────────────────────────── │ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰────────────── Ctrl+A Close ──────────────╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
