src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_loading_with_previous.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ┌ Anthropic ───────── claude-3-5-sonnet... ┐ "
"                                                       │Previous suggestion: Use .foo instead of  │ "
"                                                       │.bar                                      │ "
"                                                       │                                          │ "
"                                                       │⏳ Thinking...                            │ " Hidden by multi-width symbols: [(57, " ")]
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       │                                          │ "
"                                                       └──────────── Ctrl+A to close ─────────────┘ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
