src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_long_query_wrapping.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                       ╭ Anthropic ──── (1/2) claude-3-5-s... ╮ "
"                                       │                                      █ "
"                                       │ 1. [Fix] .users[] | select(.active   █ "
"                                       │          == true and .age > 18) |    █ "
"                                       │          {name: .name, email:        █ "
"                                       │          .email, address: .address}  █ "
"                                       │    Filters active adult users and    ║ "
"                                       │    extracts their contact            ║ "
"                                       │    information                       ║ "
"                                       │ ──────────────────────────────────── ║ "
"                                       │ ›  Ask about this query or data…     │ "
"                                       │                                      │ "
"                                       ╰ Select • Enter Apply Selection • Ctrl╯ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
