src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_no_suggestions.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Bedrock ─────────────── claude-haiku-4-5 ╮ "
"                                                       │                                          │ "
"                                                       │ ✓ No suggestions                         │ "
"                                                       │                                          │ "
"                                                       │ The AI had no suggestions for this       │ "
"                                                       │ query.                                   │ "
"                                                       │ ──────────────────────────────────────── │ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰─────── Ctrl+G Chat • Ctrl+A Close ───────╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
