src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__snapshot_tests__snapshot_ai_popup_not_configured.snap
---
source: src/ai/ai_render_tests/snapshot_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ───────── claude-3-5-sonnet... ╮ "
"                                                       │                                          █ "
"                                                       │ ⚙ AI provider not configured             █ "
"                                                       │                                          █ "
"                                                       │ To enable AI assistance, configure a pro █ "
"                                                       │ in ~/.config/jiq/config.toml:            ║ "
"                                                       │                                          ║ "
"                                                       │ [ai]                                     ║ "
"                                                       │ enabled = true                           ║ "
"                                                       │ ──────────────────────────────────────── ║ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰────────────── Ctrl+A Close ──────────────╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
